--- a/src/components/ui-kit-demo-components/block-sign/block-sign.scss
+++ b/src/components/ui-kit-demo-components/block-sign/block-sign.scss
@@ -21,6 +21,8 @@
   
       &_for-profile {
         letter-spacing: 0.07rem;
+        position: relative;
+        right: 0.5rem;
       }
   
       &_for-sliders {
