--- a/src/components/ui-kit-demo-components/profiles/profiles.scss
+++ b/src/components/ui-kit-demo-components/profiles/profiles.scss
@@ -1,9 +1,9 @@
 .profiles {
   &__container {
-    display: flex;
-    flex-direction: column;
-    height: 13.375rem;
-    justify-content: space-between;
-    margin: 1.75rem 0 0 0.375rem;
+    margin-top: 1.8rem;
+
+    &:nth-child(3) {
+      margin-top: 1.3rem;
+    }
   }
 }
