--- a/src/components/ui-kit-demo-components/search-dropdown-profiles/search-dropdown-profiles.scss
+++ b/src/components/ui-kit-demo-components/search-dropdown-profiles/search-dropdown-profiles.scss
@@ -11,7 +11,7 @@
 
   &__search-dropdown {
     height: 10rem;
-    margin-right: 1.8rem;
+    margin-right: 2.1rem;
     margin-top: 2.75rem;
     width: 44%;
 
@@ -26,12 +26,10 @@
   }
 
   &__profiles {
-    margin-right: 1rem;
     margin-top: 2.75rem;
-    width: 40%;
+    width: 40;
 
     @media screen and (max-width: 722px) {
-      margin-right: 0;
       width: 60%;
     }
 
