--- a/src/pages/ui-kit-demo/ui-kit-demo.scss
+++ b/src/pages/ui-kit-demo/ui-kit-demo.scss
@@ -62,7 +62,7 @@
       }
 
       &_for-news-events {
-        margin-top: 5.9rem;
+        margin-top: 5.5rem;
         width: 91%;
 
         @media screen and (max-width: 1094px) {
